# opengl_tutorial

./: .gitignore  CMakeLists.txt  LearningOpenGL.sln  compile.bat  compile_debug.bat  compile_execute.bat  execute.bat  main.cpp  main_.cpp  main_test.cpp
Engine/: Engine.cpp  Engine.h  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters
Engine/2D/: Particle2D.cpp  Particle2D.h
Engine/camera/: Camera.cpp  Camera.h
Engine/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
Engine/resourceManager/: ResourceManager.cpp  ResourceManager.h
Engine/shader/: Shader.cpp  Shader.h
Engine/texture/: Texture.cpp  Texture.h
Engine/ui/: UI.cpp  UI.h
Engine/x64/Debug/: Engine.idb  Engine.recipe  Engine.vcxproj.FileListAbsolute.txt  vc143.idb
LearningOpenGL/: Engine.cpp
LearningOpenGL/2D/: Sprite2D.h
LearningOpenGL/Camera/: Camera.cpp
LearningOpenGL/LearningOpenGL/: Engine.h  LearningOpenGL.vcxproj  LearningOpenGL.vcxproj.filters
LearningOpenGL/LearningOpenGL/2D/: Sprite2D.cpp
LearningOpenGL/LearningOpenGL/Camera/: Camera.h
LearningOpenGL/LearningOpenGL/Shader/: Shader.cpp  Shader.h
LearningOpenGL/LearningOpenGL/Texture/: Texture.cpp
LearningOpenGL/Libraries/libs/: assimp-vc143-mtd.lib  glm.lib
LearningOpenGL/Model/: Mesh.h  Model.h
LearningOpenGL/ResourceManager/: ResourceManager.cpp  ResourceManager.h
LearningOpenGL/Shader/: Shader.cpp  Shader.h
LearningOpenGL/Tests/: Main.cpp  Tests.vcxproj  Tests.vcxproj.filters  imgui.ini
LearningOpenGL/Tests/Cube/: Cube.cpp
LearningOpenGL/Tests/Lighting/: Lighting.h
LearningOpenGL/Tests/Rectangle/: Rectangle.cpp
LearningOpenGL/Tests/TextRendering/: TextRendering.cpp  TextRendering.h
LearningOpenGL/Tests/Triangle/: Triangle.h
LearningOpenGL/Texture/: Texture.h
LearningOpenGL/x64/Debug/: LearningOpenGL.idb
Libraries/libs/: assimp-vc143-mt.lib  freetype.lib
Test/: Main.cpp  Test.vcxproj
Test/x64/Debug/: Test.exe.recipe  Test.ilk  vc143.idb
Tests/: Main.cpp  Tests.vcxproj  Tests.vcxproj.filters
Tests/Breakout/: Breakout.cpp  Breakout.h
Tests/Breakout/Game/: Game.cpp  Game.h  GameBallObject.cpp  GameBallObject.h  GameLevel.cpp  GameObject.cpp  GameObject.h  GameParticle2D.h  GamePostProcessing.cpp  GameTextRenderer.cpp  GameTextRenderer.h
Tests/Cube/: Cube.h
Tests/Lighting/: Lighting.cpp
Tests/LoadModels/: LoadModels.cpp  LoadModels.h
Tests/Rectangle/: Rectangle.h
Tests/Shaders/cube/: cube.frag  cube.vert
Tests/Shaders/game/: game.frag  particles.vert  postprocessing.frag  postprocessing.vert  text2d.frag  text2d.vert
Tests/Shaders/lighting/: lighting.vert  lightingCube.frag
Tests/Shaders/textRendering/: textRendering.frag  textRendering.vert
Tests/Shaders/triangle/: triangle.vert
Tests/SimpleWindow/: SimpleWindow.cpp  SimpleWindow.h
Tests/Triangle/: Triangle.cpp
assets/models/katana/: Katana.blend1
shaders/: test.frag  test.vert  triangle.frag  triangle.vert
shaders/game/: game.vert  particles.frag
shaders/lighting/: lighting.vert  lightingCube.frag
shaders/lighting/colors/: colors.frag
shaders/loadModel/: loadModel.frag  loadModel.vert
shaders/rectangle/: rectangle.frag  rectangle.vert
shaders/triangle/: triangle.frag  triangle.vert
src/: Controls.cpp  Controls.h  LoadModels.cpp  LoadModels.h  LoadTextureBMP.cpp  LoadTextureBMP.h  LoadTextures.cpp  LoadTextures.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  testMath.cpp  testMath.h
src/engine/: Engine.cpp  Engine.h
src/engine/2D/: Particle2D.cpp  Particle2D.h  Sprite2D.cpp  Sprite2D.h
src/engine/camera/: Camera.cpp  Camera.h
src/engine/model/: Mesh.cpp  Mesh.h  Model.cpp  (+1 more)
src/imguiScreens/: menuBar.cpp  menuBar.h  moveCamera.cpp  moveCamera.h
(+119 files in other folders)
